--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@bull-board/api": "^6.9.1",
     "@bull-board/express": "^6.9.1",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "bull": "^4.16.5",
     "bullmq": "^5.48.1",
     "dotenv": "^16.4.7",
@@ -25,6 +26,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.0",
